# dmd

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.json
docs/: mcp-setup.md  onboarding.md
docs/adr/: 0001-append-only-source-of-truth.md  0002-message-protocol-v0.md  0003-nats-jetstream-as-transport.md  0004-no-hit-count-promotion.md  0005-phased-rollout.md  0006-chain-of-thought-field.md  0007-author-namespace.md  0008-transcript-native-format.md  0009-dmd-home-three-layers-qdrant.md  0010-mcp-server.md  0011-mem0-hybrid.md  README.md
phase0/: __init__.py  appender.py  cli.py  embedder.py  mcp_server.py  mem0_store.py  mention_router.py  obsidian_exporter.py  paths.py  reader.py  search.py
protocol/: __init__.py  roles.py  schema.json  schema.py
scripts/: append_turn.py  auto_ingest.py  ingest_claude_transcript.py  ingest_session.py
tests/: test_phase0.py  test_protocol.py  test_transcript_ingest.py
vault/: README.md  msg_016e8494959252b5.md  msg_028d5cf7ef71580b.md  msg_04226c5de50cc4eb.md  msg_04528710fa58cd5e.md  msg_04df4ecf46f15dab.md  msg_0509dc682e4d9fc5.md  msg_05b3fe3acf7fe19b.md  msg_05ef7c160b5c934e.md  msg_061ee98f34e0e2ba.md  msg_076396c1157d933e.md  msg_0797b559b3d78049.md  msg_09007a415cc7eb90.md  msg_0a2817666ef99ba8.md  msg_0b25886070e67825.md  msg_0b3653b23c7a2945.md  msg_0b6da31e5a3868dd.md  msg_0bb321f6845e4c2e.md  msg_0c1e4e30d308d15a.md  msg_0c75eea670c182a4.md  msg_0cfb692771234900.md  msg_0db88046d4518bfb.md  msg_0dd034d11daba240.md  msg_0f5e694b13dba217.md  msg_0feceb2d47867760.md  msg_10583db9ab047122.md  msg_105e0f52c6a0c4f3.md  msg_112b25e438f2a876.md  msg_11536ea6dde61694.md  msg_11dabaf4e7951e83.md  msg_1311f3e79c300271.md  msg_13601599147effe3.md  msg_1470f42c7a823bcf.md  msg_14baad31bb64ba44.md  msg_152849cc5cd852aa.md  msg_15390a96d20a097e.md  msg_15f25eac494b902c.md  msg_15f69ba54b27798a.md  msg_16765f8e05a8fad3.md  msg_16fae1c39c7856e1.md  (+379 more)
vault/.obsidian/: graph.json
