[project]
name = "dmd"
version = "0.0.1"
description = "Append-only message log as collective memory for an agent swarm"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Morty2049" }]
dependencies = [
    "pydantic>=2.6",
    "qdrant-client>=1.10",
    "sentence-transformers>=3.0",
    "mcp>=1.2",
    "mem0ai>=1.0",
    "anthropic>=0.30",
]

[project.scripts]
dmd = "phase0.cli:main"
dmd-mcp = "phase0.mcp_server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["protocol", "phase0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["protocol", "phase0", "scripts", "tests"]
extraPaths = ["scripts"]
exclude = ["**/__pycache__", "research", "references", "vault", "data", ".venv"]
strict = ["protocol"]
reportMissingTypeStubs = false
